--- a/_data/author.yml
+++ b/_data/author.yml
@@ -1,23 +1,23 @@
-name: Sharad Raj
+name: Daniel Cancelas
 dp: https://avatars2.githubusercontent.com/u/36638057?s=460&u=0cbe4fd6b5a3655d91b3eb86db834d0829a0c086&v=4
 description: "
   <p>
-    Developed by Sharad Raj who lives in India building useful things for the world.
+    Tremenda prueba la verdad.
   </p>
   <br/>
   <p>
-    You should follow him on <a href='https://github.com/sharadcodes' target='_blank'>Github</a>
+    jaja salu2
   </P>
 "
-email: dev_sharad@outlook.com
+email: dcancelasgarcia@gmail.com
 contact:
   - title: linkedin
-    url: https://www.linkedin.com/in/srsmaurya
+    url: https://www.linkedin.com/in/dcancelas
   - title: github
-    url: https://github.com/sharadcodes
+    url: https://github.com/Kioraga
   - title: twitter
-    url: https://twitter.com/sharadcodes
-  - title: dev
-    url: https://dev.to/sharadcodes
+    url: https://twitter.com/danzk15
+  # - title: dev
+  #   url: https://dev.to/
   - title: email
-    url: mailto:dev_sharad@outlook.com
+    url: mailto:dcancelasgarcia@gmail.com
