--- a/_data/author.yml
+++ b/_data/author.yml
@@ -2,12 +2,8 @@ name: Daniel Cancelas
 dp: https://avatars.githubusercontent.com/u/16990777?v=4
 description: "
   <p>
-    Tremenda prueba la verdad.
+    Soy un intento de programador al que a veces le da por ver anime
   </p>
-  <br/>
-  <p>
-    jaja salu2
-  </P>
 "
 email: dcancelasgarcia@gmail.com
 contact:
