--- a/_data/author.yml
+++ b/_data/author.yml
@@ -2,7 +2,7 @@ name: Daniel Cancelas
 dp: https://avatars.githubusercontent.com/u/16990777?v=4
 description: "
   <p>
-    Intento de programador al que a veces le da por ver anime
+    I am an attempt of a programmer who sometimes likes to watch anime.
   </p>
 "
 email: dcancelasgarcia@gmail.com
