--- a/_data/author.yml
+++ b/_data/author.yml
@@ -10,7 +10,7 @@ contact:
   - title: github
     url: https://github.com/Kioraga
   - title: twitter
-    url: https://twitter.com/danzk15
+    url: https://twitter.com/_kioraga_
   - title: anilist
     url: https://anilist.co/user/Kioraga/
   - title: linkedin
