--- a/_data/author.yml
+++ b/_data/author.yml
@@ -1,23 +1,21 @@
-name: Sharad Raj
-dp: https://avatars2.githubusercontent.com/u/36638057?s=460&u=0cbe4fd6b5a3655d91b3eb86db834d0829a0c086&v=4
+name: Daniel Cancelas
+dp: https://avatars.githubusercontent.com/u/16990777?v=4
 description: "
   <p>
-    Developed by Sharad Raj who lives in India building useful things for the world.
+    I am an attempt of a programmer who sometimes likes to watch anime.
   </p>
-  <br/>
-  <p>
-    You should follow him on <a href='https://github.com/sharadcodes' target='_blank'>Github</a>
-  </P>
 "
-email: dev_sharad@outlook.com
+email: dcancelasgarcia@gmail.com
 contact:
-  - title: linkedin
-    url: https://www.linkedin.com/in/srsmaurya
   - title: github
-    url: https://github.com/sharadcodes
+    url: https://github.com/Kioraga
   - title: twitter
-    url: https://twitter.com/iamsharadraj
-  - title: dev
-    url: https://dev.to/sharadcodes
+    url: https://twitter.com/_kioraga_
+  - title: anilist
+    url: https://anilist.co/user/Kioraga/
+  - title: linkedin
+    url: https://www.linkedin.com/in/dcancelas
+  # - title: dev
+  #   url: https://dev.to/
   - title: email
-    url: mailto:dev_sharad@outlook.com
+    url: mailto:dcancelasgarcia@gmail.com
